# vector-rust-library

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml  doc.yaml
benches/: dotprod.rs  vectorclass_bench.cpp  vectorclass_bench.hpp
src/: common.rs  exponent.rs  lib.rs  macros.rs  vec256.rs  vec256f.rs  vec4f.rs  vec8f.rs
src/vec4f/: mod.rs  neon.rs  sse.rs
src/vec8f/: avx.rs  fallback.rs  mod.rs  neon.rs
tests/: dotprod.rs  generic.rs
