[package]
authors = ["NamorNiradnug"]
name = "vector-rust-library"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NamorNiradnug/vector-rust-library"
license = "MIT"
keywords = ["simd", "vector-class-library"]
description = "Rust port of Vector Class Library"

[lib]
name = "vrl"

[dependencies]
paste = "1.0.14"
derive_more = "0.99.17"

[dev-dependencies]
criterion = "0.5"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "dotprod"
harness = false
