[package]
authors = ["NamorNiradnug"]
name = "vector-rust-library"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/NamorNiradnug/vector-rust-library"
license = "MIT"
keywords = ["simd", "vector-class-library"]
description = "Rust port of Vector Class Library"

[lib]
name = "vrl"

[dependencies]
paste = "1.0.14"
derive_more = "0.99.17"
cfg-if = "1"

[dev-dependencies]
criterion = "0.5"
rand = { version = "0.8.5", features = ["small_rng"] }
approx = "0.5"
cxx = "1.0"

[build-dependencies]
cfg_aliases = "0.2.0"
cxx-build = { version = "1.0", optional = true }

[[bench]]
name = "dotprod"
harness = false

[features]
vectorclass_bench = ["cxx-build"]

[lints.clippy]
undocumented_unsafe_blocks = "warn"
